qt/gen_qfont.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qfont.cpp", cflags).}


type QFontStyleHint* = cint
const
  QFontHelvetica* = 0
  QFontSansSerif* = 0
  QFontTimes* = 1
  QFontSerif* = 1
  QFontCourier* = 2
  QFontTypeWriter* = 2
  QFontOldEnglish* = 3
  QFontDecorative* = 3
  QFontSystem* = 4
  QFontAnyStyle* = 5
  QFontCursive* = 6
  QFontMonospace* = 7
  QFontFantasy* = 8



type QFontStyleStrategy* = cint
const
  QFontPreferDefault* = 1
  QFontPreferBitmap* = 2
  QFontPreferDevice* = 4
  QFontPreferOutline* = 8
  QFontForceOutline* = 16
  QFontPreferMatch* = 32
  QFontPreferQuality* = 64
  QFontPreferAntialias* = 128
  QFontNoAntialias* = 256
  QFontOpenGLCompatible* = 512
  QFontForceIntegerMetrics* = 1024
  QFontNoSubpixelAntialias* = 2048
  QFontPreferNoShaping* = 4096
  QFontNoFontMerging* = 32768



type QFontHintingPreference* = cint
const
  QFontPreferDefaultHinting* = 0
  QFontPreferNoHinting* = 1
  QFontPreferVerticalHinting* = 2
  QFontPreferFullHinting* = 3



type QFontWeight* = cint
const
  QFontThin* = 0
  QFontExtraLight* = 12
  QFontLight* = 25
  QFontNormal* = 50
  QFontMedium* = 57
  QFontDemiBold* = 63
  QFontBold* = 75
  QFontExtraBold* = 81
  QFontBlack* = 87



type QFontStyle* = cint
const
  QFontStyleNormal* = 0
  QFontStyleItalic* = 1
  QFontStyleOblique* = 2



type QFontStretch* = cint
const
  QFontAnyStretch* = 0
  QFontUltraCondensed* = 50
  QFontExtraCondensed* = 62
  QFontCondensed* = 75
  QFontSemiCondensed* = 87
  QFontUnstretched* = 100
  QFontSemiExpanded* = 112
  QFontExpanded* = 125
  QFontExtraExpanded* = 150
  QFontUltraExpanded* = 200



type QFontCapitalization* = cint
const
  QFontMixedCase* = 0
  QFontAllUppercase* = 1
  QFontAllLowercase* = 2
  QFontSmallCaps* = 3
  QFontCapitalize* = 4



type QFontSpacingType* = cint
const
  QFontPercentageSpacing* = 0
  QFontAbsoluteSpacing* = 1



type QFontResolveProperties* = cint
const
  QFontNoPropertiesResolved* = 0
  QFontFamilyResolved* = 1
  QFontSizeResolved* = 2
  QFontStyleHintResolved* = 4
  QFontStyleStrategyResolved* = 8
  QFontWeightResolved* = 16
  QFontStyleResolved* = 32
  QFontUnderlineResolved* = 64
  QFontOverlineResolved* = 128
  QFontStrikeOutResolved* = 256
  QFontFixedPitchResolved* = 512
  QFontStretchResolved* = 1024
  QFontKerningResolved* = 2048
  QFontCapitalizationResolved* = 4096
  QFontLetterSpacingResolved* = 8192
  QFontWordSpacingResolved* = 16384
  QFontHintingPreferenceResolved* = 32768
  QFontStyleNameResolved* = 65536
  QFontFamiliesResolved* = 131072
  QFontAllPropertiesResolved* = 262143



import gen_qfont_types
export gen_qfont_types

import
  gen_qobjectdefs,
  gen_qpaintdevice,
  gen_qvariant
export
  gen_qobjectdefs,
  gen_qpaintdevice,
  gen_qvariant

type cQFont*{.exportc: "QFont", incompleteStruct.} = object

proc fcQFont_new(): ptr cQFont {.importc: "QFont_new".}
proc fcQFont_new2(family: struct_miqt_string): ptr cQFont {.importc: "QFont_new2".}
proc fcQFont_new3(font: pointer, pd: pointer): ptr cQFont {.importc: "QFont_new3".}
proc fcQFont_new4(font: pointer, pd: pointer): ptr cQFont {.importc: "QFont_new4".}
proc fcQFont_new5(font: pointer): ptr cQFont {.importc: "QFont_new5".}
proc fcQFont_new6(family: struct_miqt_string, pointSize: cint): ptr cQFont {.importc: "QFont_new6".}
proc fcQFont_new7(family: struct_miqt_string, pointSize: cint, weight: cint): ptr cQFont {.importc: "QFont_new7".}
proc fcQFont_new8(family: struct_miqt_string, pointSize: cint, weight: cint, italic: bool): ptr cQFont {.importc: "QFont_new8".}
proc fcQFont_swap(self: pointer, other: pointer): void {.importc: "QFont_swap".}
proc fcQFont_family(self: pointer, ): struct_miqt_string {.importc: "QFont_family".}
proc fcQFont_setFamily(self: pointer, family: struct_miqt_string): void {.importc: "QFont_setFamily".}
proc fcQFont_families(self: pointer, ): struct_miqt_array {.importc: "QFont_families".}
proc fcQFont_setFamilies(self: pointer, families: struct_miqt_array): void {.importc: "QFont_setFamilies".}
proc fcQFont_styleName(self: pointer, ): struct_miqt_string {.importc: "QFont_styleName".}
proc fcQFont_setStyleName(self: pointer, styleName: struct_miqt_string): void {.importc: "QFont_setStyleName".}
proc fcQFont_pointSize(self: pointer, ): cint {.importc: "QFont_pointSize".}
proc fcQFont_setPointSize(self: pointer, pointSize: cint): void {.importc: "QFont_setPointSize".}
proc fcQFont_pointSizeF(self: pointer, ): float64 {.importc: "QFont_pointSizeF".}
proc fcQFont_setPointSizeF(self: pointer, pointSizeF: float64): void {.importc: "QFont_setPointSizeF".}
proc fcQFont_pixelSize(self: pointer, ): cint {.importc: "QFont_pixelSize".}
proc fcQFont_setPixelSize(self: pointer, pixelSize: cint): void {.importc: "QFont_setPixelSize".}
proc fcQFont_weight(self: pointer, ): cint {.importc: "QFont_weight".}
proc fcQFont_setWeight(self: pointer, weight: cint): void {.importc: "QFont_setWeight".}
proc fcQFont_bold(self: pointer, ): bool {.importc: "QFont_bold".}
proc fcQFont_setBold(self: pointer, bold: bool): void {.importc: "QFont_setBold".}
proc fcQFont_setStyle(self: pointer, style: cint): void {.importc: "QFont_setStyle".}
proc fcQFont_style(self: pointer, ): cint {.importc: "QFont_style".}
proc fcQFont_italic(self: pointer, ): bool {.importc: "QFont_italic".}
proc fcQFont_setItalic(self: pointer, b: bool): void {.importc: "QFont_setItalic".}
proc fcQFont_underline(self: pointer, ): bool {.importc: "QFont_underline".}
proc fcQFont_setUnderline(self: pointer, underline: bool): void {.importc: "QFont_setUnderline".}
proc fcQFont_overline(self: pointer, ): bool {.importc: "QFont_overline".}
proc fcQFont_setOverline(self: pointer, overline: bool): void {.importc: "QFont_setOverline".}
proc fcQFont_strikeOut(self: pointer, ): bool {.importc: "QFont_strikeOut".}
proc fcQFont_setStrikeOut(self: pointer, strikeOut: bool): void {.importc: "QFont_setStrikeOut".}
proc fcQFont_fixedPitch(self: pointer, ): bool {.importc: "QFont_fixedPitch".}
proc fcQFont_setFixedPitch(self: pointer, fixedPitch: bool): void {.importc: "QFont_setFixedPitch".}
proc fcQFont_kerning(self: pointer, ): bool {.importc: "QFont_kerning".}
proc fcQFont_setKerning(self: pointer, kerning: bool): void {.importc: "QFont_setKerning".}
proc fcQFont_styleHint(self: pointer, ): cint {.importc: "QFont_styleHint".}
proc fcQFont_styleStrategy(self: pointer, ): cint {.importc: "QFont_styleStrategy".}
proc fcQFont_setStyleHint(self: pointer, param1: cint): void {.importc: "QFont_setStyleHint".}
proc fcQFont_setStyleStrategy(self: pointer, s: cint): void {.importc: "QFont_setStyleStrategy".}
proc fcQFont_stretch(self: pointer, ): cint {.importc: "QFont_stretch".}
proc fcQFont_setStretch(self: pointer, stretch: cint): void {.importc: "QFont_setStretch".}
proc fcQFont_letterSpacing(self: pointer, ): float64 {.importc: "QFont_letterSpacing".}
proc fcQFont_letterSpacingType(self: pointer, ): cint {.importc: "QFont_letterSpacingType".}
proc fcQFont_setLetterSpacing(self: pointer, typeVal: cint, spacing: float64): void {.importc: "QFont_setLetterSpacing".}
proc fcQFont_wordSpacing(self: pointer, ): float64 {.importc: "QFont_wordSpacing".}
proc fcQFont_setWordSpacing(self: pointer, spacing: float64): void {.importc: "QFont_setWordSpacing".}
proc fcQFont_setCapitalization(self: pointer, capitalization: cint): void {.importc: "QFont_setCapitalization".}
proc fcQFont_capitalization(self: pointer, ): cint {.importc: "QFont_capitalization".}
proc fcQFont_setHintingPreference(self: pointer, hintingPreference: cint): void {.importc: "QFont_setHintingPreference".}
proc fcQFont_hintingPreference(self: pointer, ): cint {.importc: "QFont_hintingPreference".}
proc fcQFont_rawMode(self: pointer, ): bool {.importc: "QFont_rawMode".}
proc fcQFont_setRawMode(self: pointer, rawMode: bool): void {.importc: "QFont_setRawMode".}
proc fcQFont_exactMatch(self: pointer, ): bool {.importc: "QFont_exactMatch".}
proc fcQFont_operatorAssign(self: pointer, param1: pointer): void {.importc: "QFont_operatorAssign".}
proc fcQFont_operatorEqual(self: pointer, param1: pointer): bool {.importc: "QFont_operatorEqual".}
proc fcQFont_operatorNotEqual(self: pointer, param1: pointer): bool {.importc: "QFont_operatorNotEqual".}
proc fcQFont_operatorLesser(self: pointer, param1: pointer): bool {.importc: "QFont_operatorLesser".}
proc fcQFont_ToQVariant(self: pointer, ): pointer {.importc: "QFont_ToQVariant".}
proc fcQFont_isCopyOf(self: pointer, param1: pointer): bool {.importc: "QFont_isCopyOf".}
proc fcQFont_setRawName(self: pointer, rawName: struct_miqt_string): void {.importc: "QFont_setRawName".}
proc fcQFont_rawName(self: pointer, ): struct_miqt_string {.importc: "QFont_rawName".}
proc fcQFont_key(self: pointer, ): struct_miqt_string {.importc: "QFont_key".}
proc fcQFont_toString(self: pointer, ): struct_miqt_string {.importc: "QFont_toString".}
proc fcQFont_fromString(self: pointer, param1: struct_miqt_string): bool {.importc: "QFont_fromString".}
proc fcQFont_substitute(param1: struct_miqt_string): struct_miqt_string {.importc: "QFont_substitute".}
proc fcQFont_substitutes(param1: struct_miqt_string): struct_miqt_array {.importc: "QFont_substitutes".}
proc fcQFont_substitutions(): struct_miqt_array {.importc: "QFont_substitutions".}
proc fcQFont_insertSubstitution(param1: struct_miqt_string, param2: struct_miqt_string): void {.importc: "QFont_insertSubstitution".}
proc fcQFont_insertSubstitutions(param1: struct_miqt_string, param2: struct_miqt_array): void {.importc: "QFont_insertSubstitutions".}
proc fcQFont_removeSubstitutions(param1: struct_miqt_string): void {.importc: "QFont_removeSubstitutions".}
proc fcQFont_initialize(): void {.importc: "QFont_initialize".}
proc fcQFont_cleanup(): void {.importc: "QFont_cleanup".}
proc fcQFont_cacheStatistics(): void {.importc: "QFont_cacheStatistics".}
proc fcQFont_defaultFamily(self: pointer, ): struct_miqt_string {.importc: "QFont_defaultFamily".}
proc fcQFont_lastResortFamily(self: pointer, ): struct_miqt_string {.importc: "QFont_lastResortFamily".}
proc fcQFont_lastResortFont(self: pointer, ): struct_miqt_string {.importc: "QFont_lastResortFont".}
proc fcQFont_resolve(self: pointer, param1: pointer): pointer {.importc: "QFont_resolve".}
proc fcQFont_resolve2(self: pointer, ): cuint {.importc: "QFont_resolve2".}
proc fcQFont_resolveWithMask(self: pointer, mask: cuint): void {.importc: "QFont_resolveWithMask".}
proc fcQFont_setStyleHint2(self: pointer, param1: cint, param2: cint): void {.importc: "QFont_setStyleHint2".}
proc fcQFont_staticMetaObject(): pointer {.importc: "QFont_staticMetaObject".}
proc fcQFont_delete(self: pointer) {.importc: "QFont_delete".}


func init*(T: type QFont, h: ptr cQFont): QFont =
  T(h: h)
proc create*(T: type QFont, ): QFont =

  QFont.init(fcQFont_new())
proc create*(T: type QFont, family: string): QFont =

  QFont.init(fcQFont_new2(struct_miqt_string(data: family, len: csize_t(len(family)))))
proc create*(T: type QFont, font: QFont, pd: gen_qpaintdevice.QPaintDevice): QFont =

  QFont.init(fcQFont_new3(font.h, pd.h))
proc create2*(T: type QFont, font: QFont, pd: gen_qpaintdevice.QPaintDevice): QFont =

  QFont.init(fcQFont_new4(font.h, pd.h))
proc create*(T: type QFont, font: QFont): QFont =
